# etl_assignment

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
.github/workflows/: validate-dev-CI.yml  validate-general-CI.yml  validate-main-CI.yml
etl_assignment/: general_config.py  logging_config.py  pipeline.py
etl_assignment/config/: config.json  logging_config.json
etl_assignment/scripts/: run_assignment_pipeline.py
etl_assignment/steps/: extract.py  load.py  step.py  transform.py  utils.py
etl_assignment/tests/: test_extract.py  test_load.py  test_step.py  test_transform.py  test_utils.py
